# ChangeLog for app-text/evince
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.281 2015/01/18 11:35:29 pacho Exp $

*evince-3.14.1-r1 (18 Jan 2015)

  18 Jan 2015; Pacho Ramos <pacho@gentoo.org> +evince-3.14.1-r1.ebuild,
  +files/evince-3.14.1-critical-warning.patch,
  +files/evince-3.14.1-disable-toggle-find.patch,
  +files/evince-3.14.1-gnome-desktop.patch,
  +files/evince-3.14.1-incorrect-resolution.patch,
  +files/evince-3.14.1-scroll-search.patch,
  +files/evince-3.14.1-show-correct.patch,
  +files/evince-3.14.1-thumbnail-size.patch:
  Apply multiple upstream patches, tests are no longer provided in 3.14 cycle as
  they were broken, drop old

  27 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> evince-3.14.1.ebuild:
  Add missing dependency for eautoreconf, bug #533682.

*evince-3.14.1 (21 Dec 2014)

  21 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> +evince-3.14.1.ebuild,
  +files/evince-3.14.0-non-bash-support.patch:
  Version bump for Gnome 3.14.

*evince-3.12.2-r1 (19 Dec 2014)

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> +evince-3.12.2-r1.ebuild,
  +files/evince-3.12.2-memory-leak.patch,
  +files/evince-3.12.2-print-center.patch,
  +files/evince-3.12.2-scroll-search-1.patch,
  +files/evince-3.12.2-scroll-search-2.patch, -evince-3.12.1.ebuild:
  Fix scrolling when search is used (#532878 by Johan Hovold), apply some more
  fixes from 3.12 branch. Drop old.

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> evince-3.12.2.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> evince-3.12.2.ebuild:
  x86 stable, bug 529964

  13 Nov 2014; Pacho Ramos <pacho@gentoo.org> -evince-2.32.0-r4.ebuild,
  -files/evince-0.7.1-display-menu.patch,
  -files/evince-2.32.0-create_thumbnail_frame-null.patch,
  -files/evince-2.32.0-desktop-categories.patch,
  -files/evince-2.32.0-dvi-CVEs.patch, -files/evince-2.32.0-dvi-security.patch,