@@ -17,14 +17,13 @@ DIST evince-3.12.2.tar.xz 2913988 SHA256 30c243bbfde56338c25a39003b4848143be4215
 DIST evince-3.14.1.tar.xz 3082612 SHA256 13ec728d6957aa18ba21a3a66504dd52b8607596337f30f0908b62b5fcc14507 SHA512 a54b0ab1099fd69ae30b640ecd1edd17c638f0f70ea9f459c49489e40a349a658f76a19d6181aa65e34d97575d687500c216bca370f867fe3348e46e5a77b315 WHIRLPOOL 2eac059cf703c31fcbc1779612d1b2b651fc4c8a3513d095ed9ad403b9ac403912ddd56664e97400ce988709d8082ad59c127b2636be251b65a39edd44f6af70
 EBUILD evince-3.12.2-r1.ebuild 3079 SHA256 eddee9e7f9b38d446d45ea8787b195b440193c0b63804ff2743f5cd8b2f2b842 SHA512 97c30cd18809a709aa03ec72fd30cce1c56841948d19e38fbd2a62bc67bc197cb6f59fe6f8ddf8c19cb8ac32388d5f6bd8d649f67e22e854735a01bacf9d8fa5 WHIRLPOOL 95abe41468ebf09d7dec931326266a83a8ef7204b2c37f75f835a18ef717a0c459ec8c2666b83c5c94ebe60a5356cb77661674f0568c2f765d02939a12b510ed
 EBUILD evince-3.12.2.ebuild 2721 SHA256 3d006e1dee77402054fbe99956455c6d453971ef86593ace3d22f59bfc837809 SHA512 3e7e7f36856ce2a4a7fedb7344857aba1b1ea16946be2fd5076bdea2b42c092f1cdd26b1860ca0b8828dc8cac6b442dcc156eddff64c7b08eb4853dc4395b817 WHIRLPOOL fc352d151c630d229da75e0a3ac37c3dff2ac0d1a0b9d1ba087c847608ed438d53f7d959d252bb46b49cef9d4af888404f7becf078463a9fc8a5f7df8b862980
-EBUILD evince-3.14.1-r1.ebuild 3882 SHA256 29e5d915bb914aff74ee0cdaaa6df282c7b682a0bd26156057c2cfa2c59ff757 SHA512 383943e8e0331079e29b786e895badadaebf56aa990d1fd64973e5851fa20dcc1344c2f3e162e4e008df08dd43d99ca493ecaab6043f14ea302d7e2f5bf96380 WHIRLPOOL 96e60afbb36ce1f3774e130bf06695d444a3aa7d9de214190d1d8b80f53717ac4007b7482d9ba0caeef0ea8f2957585c8914f6994d131a883cdfa147158a717b
-EBUILD evince-3.14.1.ebuild 3154 SHA256 20f6735c0818520a7b27b5c8d0d8625746a9814adb0734ed40992d1488ecc1b0 SHA512 fc3d7b748a379b365bb0ff0dd722494040c702055571055e0a5f33a2b4cc22b0bbc676ccbef27ad80bd2a24bd0424508594e6d116f0eba4db161a32d423d05d9 WHIRLPOOL f7e02811f8d2f557e85918279b0289c0ce2b1d15187d0def4032c1e16d56a328b7550638427def91fbd89cd3875fa0dff9c1ae6f24b8f7be150440ae884057e2
-MISC ChangeLog 43394 SHA256 c9f4a812e7a06b9618293e4c18f68cbee52ce09a7f11b8cb1864f99bbc28c298 SHA512 349448680f6db819c6c9e25cb267842bb5171d327ab20fd05da2ac82c0958b1cbaaff2d37a7760fb29f0350761a9f1b57b11dd95f8b707f0ccb7665150bfba54 WHIRLPOOL 3bc6cf44d792514bb7226eff71cec8e1b1c97843852eaa3fafaf5e9931050510553cce8b25ba79bfcebc0294f8a31c598fa112591f7d5ff04adff9fe3b280d01
+EBUILD evince-3.14.1-r1.ebuild 3899 SHA256 2ae35b7c209aa0f7771bd41197e5b103d93e43fc436d9ec93e78375e68503027 SHA512 45cbd2c1e3e3c083953c18fccb913126667b18e1b74b5032923903297392c4a2f6d07c7b7102373f6287d17684bf510782fa163e3436ac7ed969d90ab370c0fe WHIRLPOOL 1f51abafb20a2a953e0df9bc71a0a09e44c2ea8a4295a476e1c83b2ecf7c2cf45fcd554b9784de3cbfa933b3c8186e16226dfc68e203f8599fd5809898319a27
+MISC ChangeLog 43550 SHA256 f3ea91d36d9fcd9e7d98b78efff3583726a47d9fbac7234e62b63e7ef9cac0ee SHA512 1fae0820d48437d6d3a7068391e341b121b74ffc4d68ddb6a62c27fa6242ebfad349b316fa6c1fbce426535cfd705d1324b8a100ddd51ad934c2076b80788aed WHIRLPOOL 082572f591320cd38effae4c603a3da731fb639c95b8ca97fdaf44bfc70504e209adc5742b0885fe7f9f91d65985c4c267564988c9f9f9285bddffaa354a6233
 MISC metadata.xml 587 SHA256 6977b9daf0c11361cb1a1e8f44990a728c1420da4daeb5b8aacb0c4aa315ba34 SHA512 234effcc88c91018a986c4513dc7e1436123f0a4b25725bed5c704ae18143bd2827c3d97e39015d0f6b7b0218d32adfbc4f483899493cfbc47de6648bad21020 WHIRLPOOL 52deb1b8aa08dfcb8e4b655a10b00a83221b1a9918e0e26128718e50e89fe0fb3dc2b45dbf362534d41d31134ae5620e449704a7342eef74c9f3be30d8480056
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS7moIACgkQCaWpQKGI+9Ru7ACfSQgxP82ED4B2nOwV43bnSW6O
-3fwAn3bDb5BptHWNNeTLFvcRka5I6pj+
-=jVBq
+iEYEAREIAAYFAlTtuDgACgkQCaWpQKGI+9QKJwCeLJoLv8tTFlGXhXj2T6IUgqrO
+aJgAnR8bLK/n1EJii8ItNTIC9Y0h74KO
+=0rC+
 -----END PGP SIGNATURE-----
