@@ -6,8 +6,8 @@ HOMEPAGE=https://wiki.gnome.org/Apps/Evince
 IUSE=debug djvu dvi gnome +introspection libsecret nautilus +postscript t1lib tiff xps debug
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris
 LICENSE=GPL-2+ CC-BY-SA-3.0
-RDEPEND=dev-libs/atk >=dev-libs/glib-2.36:2 >=dev-libs/libxml2-2.5:2 sys-libs/zlib:= x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-3.14:3[introspection?] gnome-base/gsettings-desktop-schemas >=x11-libs/cairo-1.10:= >=app-text/poppler-0.24:=[cairo] djvu? ( >=app-text/djvu-3.5.17:= ) dvi? ( virtual/tex-base dev-libs/kpathsea:= t1lib? ( >=media-libs/t1lib-5:= ) ) gnome? ( gnome-base/gnome-desktop:3 ) introspection? ( >=dev-libs/gobject-introspection-1 ) libsecret? ( >=app-crypt/libsecret-0.5 ) nautilus? ( >=gnome-base/nautilus-2.91.4[introspection?] ) postscript? ( >=app-text/libspectre-0.2:= ) tiff? ( >=media-libs/tiff-3.6:0= ) xps? ( >=app-text/libgxps-0.2.1:= ) gnome-base/librsvg || ( >=x11-themes/adwaita-icon-theme-2.17.1 >=x11-themes/gnome-icon-theme-2.17.1 >=x11-themes/hicolor-icon-theme-0.10 ) x11-themes/gnome-icon-theme-symbolic
+RDEPEND=dev-libs/atk >=dev-libs/glib-2.36:2 >=dev-libs/libxml2-2.5:2 sys-libs/zlib:= x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-3.14:3[introspection?] gnome-base/gsettings-desktop-schemas >=x11-libs/cairo-1.10:= >=app-text/poppler-0.24:=[cairo] djvu? ( >=app-text/djvu-3.5.17:= ) dvi? ( virtual/tex-base dev-libs/kpathsea:= t1lib? ( >=media-libs/t1lib-5:= ) ) gnome? ( gnome-base/gnome-desktop:3 ) introspection? ( >=dev-libs/gobject-introspection-1 ) libsecret? ( >=app-crypt/libsecret-0.5 ) nautilus? ( >=gnome-base/nautilus-2.91.4[introspection?] ) postscript? ( >=app-text/libspectre-0.2:= ) tiff? ( >=media-libs/tiff-3.6:0= ) xps? ( >=app-text/libgxps-0.2.1:= ) gnome-base/gvfs gnome-base/librsvg || ( >=x11-themes/adwaita-icon-theme-2.17.1 >=x11-themes/gnome-icon-theme-2.17.1 >=x11-themes/hicolor-icon-theme-0.10 ) x11-themes/gnome-icon-theme-symbolic
 SLOT=0/evd3.4-evv3.3
 SRC_URI=mirror://gnome/sources/evince/3.14/evince-3.14.1.tar.xz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	c77a2c791ae15742c3c796344e279142	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=03803c6b266fcaa36d0df43dc52aa0db
+_md5_=b318df535eb55284274c8234164c1e68
