@@ -1,6 +1,10 @@
 # ChangeLog for app-text/evince
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.281 2015/01/18 11:35:29 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.282 2015/02/25 11:55:35 pacho Exp $
+
+  25 Feb 2015; Pacho Ramos <pacho@gentoo.org> -evince-3.14.1.ebuild,
+  evince-3.14.1-r1.ebuild:
+  gvfs is used at runtime (#541318 by Kelvin Ng), drop old
 
 *evince-3.14.1-r1 (18 Jan 2015)
 
